# Snake

./: .gitignore  Cargo.toml  README.md  attributions.md  attributions.txt
src/: body.rs  config.rs  io.rs  lib.rs  main.rs  outerwear.rs  side.rs  view.rs
src/action/: app.rs  mod.rs
src/model/: gamestate.rs  grid.rs  mod.rs  playable.rs  snake.rs  snake_tools.rs
